# mac-cleaner

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release-macos.yml
docs/: CLEAN_NATIVE_DESIGN.md  MACOS_SIGNING_NOTARIZATION_CHECKLIST.md  QA_SPRINT4_REPORT.md  RELEASE_VALIDATION.md  SAFETY_MODEL.md
scripts/: README.md  mac_cleaner_v2.sh  setup_apple_secrets.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cleaner.rs  lib.rs  main.rs
src-tauri/src/cleaner/: apps_commands.rs  history_commands.rs  metrics_commands.rs  scanner_commands.rs  types.rs
src/components/: CleanerCard.tsx  UninstallPanel.tsx
src/components/common/: ConfirmDialog.tsx  MetricCard.tsx  ResultPanel.tsx
src/components/layout/: SidebarNav.tsx
src/components/views/: CleanerView.tsx  FilesView.tsx  OverviewView.tsx  SettingsView.tsx  UninstallView.tsx  viewTypes.ts
src/hooks/: useSystemMetrics.ts
src/services/: cleanerApi.ts
src/types/: cleaner.ts
