[package]
name = "mac-cleaner-tauri"
version = "0.1.0"
description = "Mac Cleaner Tauri"
authors = ["Mac Cleaner Team"]
edition = "2021"

[features]
default = ["native-clean"]
native-clean = []

[lib]
name = "mac_cleaner_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.9.0"
